# prog_lang

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  build.sh  compile_flags.txt  main.odin  meson.build  run.sh
examples/: attributes.prog  control_flow.prog  errors.prog  parsing.prog  struct.prog
frontend/compiling/: compiling.odin
frontend/lexer/: internal.odin  lexer.odin
frontend/lexing/: internal.odin  lexer.odin
frontend/parser/: expressions.odin  internal.odin  parser.odin  util.odin
frontend/parsing/: expressions.odin  parser.odin  statements.odin  util.odin
src/: main.c  main.odin
src/backend/compiling/: compiling.odin  internal.odin
src/debugging/: ast_printer.odin  memory.odin  token_printer.odin
src/ds/: array.c  array.h  trie.c  trie.h
src/frontend/: lexer.c  lexer.h  parser.c  parser.h
src/frontend/lexing/: lexer.odin
src/frontend/parsing/: expressions.odin  parser.odin  statements.odin
src/util/: io.c  io.h  util.odin
tests/: containers.prog  functions.prog  parsing.prog  struct.prog  tokens.prog
util/: util.odin
